# breakpoint

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.adoc  build.jam  conandata.yml  conanfile.py
.github/workflows/: barbarian.yml
include/: debugging.hpp
src/: linux.cxx  macos.cxx  windows.cxx
tests/: break_run_test.cpp  breakpoint_if_dbg_run_test.cpp  breakpoint_run_fail_test.cpp  build.jam  is_debugger_present_run_test.cpp
